safeplace/gen/CstrSpecParser.java
// Generated from /Users/fhermeni/Research/Code/Btrplace/solver/safeplace/src/main/antlr/btrplace/solver/api/cstrSpec/CstrSpec.g4 by ANTLR 4.x
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CstrSpecParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_COMMENT=1, LINE_COMMENT=2, WS=3, SUCH_AS=4, LACC=5, RACC=6, COMMA=7, 
		IN=8, NOT_IN=9, INCL=10, NOT_INCL=11, PLUS=12, MINUS=13, MULT=14, DIV=15, 
		ALL=16, EXISTS=17, INT=18, INTER=19, UNION=20, AND=21, OR=22, EQ=23, NOT_EQ=24, 
		LPARA=25, RPARA=26, DEF_CONTENT=27, IMPLIES=28, IFF=29, LT=30, LEQ=31, 
		GT=32, GEQ=33, TRUE=34, FALSE=35, NOT=36, LBRACK=37, RBRACK=38, STRING=39, 
		BEGIN=40, DISCRETE=41, CORE=42, CONSTRAINT=43, ID=44;
	public static final String[] tokenNames = {
		"<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", "WS", "'.'", "'{'", "'}'", 
		"','", "':'", "'/:'", "'<:'", "'/<:'", "'+'", "'-'", "'*'", "'/'", "'!'", 
		"'?'", "INT", "'\\/'", "'/\\'", "'&'", "'|'", "'='", "'/='", "'('", "')'", 
		"'::='", "'-->'", "'<-->'", "'<'", "'<='", "'>'", "'>='", "'true'", "'false'", 
		"'~'", "'['", "']'", "STRING", "'^'", "'discrete'", "'core'", "'constraint'", 
		"ID"
	};
	public static final int
		RULE_term = 0, RULE_set = 1, RULE_list = 2, RULE_comparison = 3, RULE_typedef = 4, 
		RULE_formula = 5, RULE_call = 6, RULE_constraint = 7, RULE_spec = 8;
	public static final String[] ruleNames = {
		"term", "set", "list", "comparison", "typedef", "formula", "call", "constraint", 
		"spec"
	};

	@Override
	public String getGrammarFileName() { return "CstrSpec.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CstrSpecParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TermContext extends ParserRuleContext {
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
	 
		public TermContext() { }
		public void copyFrom(TermContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntTermContext extends TermContext {
		public TerminalNode INT() { return getToken(CstrSpecParser.INT, 0); }
		public IntTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterIntTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitIntTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitIntTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TermFuncContext extends TermContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public TermFuncContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterTermFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitTermFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitTermFunc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IdTermContext extends TermContext {
		public TerminalNode ID() { return getToken(CstrSpecParser.ID, 0); }
		public IdTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterIdTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitIdTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitIdTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArrayTermContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(CstrSpecParser.RBRACK, 0); }
		public TerminalNode ID() { return getToken(CstrSpecParser.ID, 0); }
		public TerminalNode LBRACK() { return getToken(CstrSpecParser.LBRACK, 0); }
		public ArrayTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterArrayTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitArrayTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitArrayTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetTermContext extends TermContext {
		public SetContext set() {
			return getRuleContext(SetContext.class,0);
		}
		public SetTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterSetTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitSetTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitSetTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringTermContext extends TermContext {
		public TerminalNode STRING() { return getToken(CstrSpecParser.STRING, 0); }
		public StringTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterStringTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitStringTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitStringTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ProtectedTermContext extends TermContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode LPARA() { return getToken(CstrSpecParser.LPARA, 0); }
		public TerminalNode RPARA() { return getToken(CstrSpecParser.RPARA, 0); }
		public ProtectedTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterProtectedTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitProtectedTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitProtectedTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ListTermContext extends TermContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ListTermContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterListTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitListTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitListTerm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TermOpContext extends TermContext {
		public TermContext t1;
		public Token op;
		public TermContext t2;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TerminalNode UNION() { return getToken(CstrSpecParser.UNION, 0); }
		public TerminalNode DIV() { return getToken(CstrSpecParser.DIV, 0); }
		public TerminalNode MULT() { return getToken(CstrSpecParser.MULT, 0); }
		public TerminalNode MINUS() { return getToken(CstrSpecParser.MINUS, 0); }
		public TerminalNode INTER() { return getToken(CstrSpecParser.INTER, 0); }
		public TerminalNode PLUS() { return getToken(CstrSpecParser.PLUS, 0); }
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TermOpContext(TermContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterTermOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitTermOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitTermOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		return term(0);
	}

	private TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState);
		TermContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_term, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new ProtectedTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(19); match(LPARA);
				setState(20); term(0);
				setState(21); match(RPARA);
				}
				break;
			case 2:
				{
				_localctx = new TermFuncContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(23); call();
				}
				break;
			case 3:
				{
				_localctx = new IdTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(24); match(ID);
				}
				break;
			case 4:
				{
				_localctx = new ArrayTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(25); match(ID);
				setState(26); match(LBRACK);
				setState(27); term(0);
				setState(28); match(RBRACK);
				}
				break;
			case 5:
				{
				_localctx = new SetTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(30); set();
				}
				break;
			case 6:
				{
				_localctx = new ListTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(31); list();
				}
				break;
			case 7:
				{
				_localctx = new IntTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(32); match(INT);
				}
				break;
			case 8:
				{
				_localctx = new StringTermContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(33); match(STRING);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(41);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TermOpContext(new TermContext(_parentctx, _parentState));
					((TermOpContext)_localctx).t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_term);
					setState(36);
					if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
					setState(37);
					((TermOpContext)_localctx).op = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULT) | (1L << DIV) | (1L << INTER) | (1L << UNION))) != 0)) ) {
						((TermOpContext)_localctx).op = (Token)_errHandler.recoverInline(this);
					}
					consume();
					setState(38); ((TermOpContext)_localctx).t2 = term(10);
					}
					} 
				}
				setState(43);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SetContext extends ParserRuleContext {
		public SetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set; }
	 
		public SetContext() { }
		public void copyFrom(SetContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SetInExtensionContext extends SetContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(CstrSpecParser.COMMA); }
		public TerminalNode LACC() { return getToken(CstrSpecParser.LACC, 0); }
		public TerminalNode RACC() { return getToken(CstrSpecParser.RACC, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(CstrSpecParser.COMMA, i);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public SetInExtensionContext(SetContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterSetInExtension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitSetInExtension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitSetInExtension(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SetInComprehensionContext extends SetContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode SUCH_AS() { return getToken(CstrSpecParser.SUCH_AS, 0); }
		public TerminalNode COMMA() { return getToken(CstrSpecParser.COMMA, 0); }
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public TerminalNode LACC() { return getToken(CstrSpecParser.LACC, 0); }
		public TerminalNode RACC() { return getToken(CstrSpecParser.RACC, 0); }
		public SetInComprehensionContext(SetContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterSetInComprehension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitSetInComprehension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitSetInComprehension(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetContext set() throws RecognitionException {
		SetContext _localctx = new SetContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_set);
		int _la;
		try {
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new SetInComprehensionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(44); match(LACC);
				setState(45); term(0);
				setState(46); match(SUCH_AS);
				setState(47); typedef();
				setState(50);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(48); match(COMMA);
					setState(49); formula(0);
					}
				}

				setState(52); match(RACC);
				}
				break;
			case 2:
				_localctx = new SetInExtensionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(54); match(LACC);
				setState(55); term(0);
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(56); match(COMMA);
					setState(57); term(0);
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(63); match(RACC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	 
		public ListContext() { }
		public void copyFrom(ListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ListInComprehensionContext extends ListContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(CstrSpecParser.RBRACK, 0); }
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode SUCH_AS() { return getToken(CstrSpecParser.SUCH_AS, 0); }
		public TerminalNode COMMA() { return getToken(CstrSpecParser.COMMA, 0); }
		public TypedefContext typedef() {
			return getRuleContext(TypedefContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(CstrSpecParser.LBRACK, 0); }
		public ListInComprehensionContext(ListContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterListInComprehension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitListInComprehension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitListInComprehension(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ListInExtensionContext extends ListContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TerminalNode RBRACK() { return getToken(CstrSpecParser.RBRACK, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CstrSpecParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CstrSpecParser.COMMA, i);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public TerminalNode LBRACK() { return getToken(CstrSpecParser.LBRACK, 0); }
		public ListInExtensionContext(ListContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterListInExtension(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitListInExtension(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitListInExtension(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			setState(88);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new ListInComprehensionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67); match(LBRACK);
				setState(68); term(0);
				setState(69); match(SUCH_AS);
				setState(70); typedef();
				setState(73);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(71); match(COMMA);
					setState(72); formula(0);
					}
				}

				setState(75); match(RBRACK);
				}
				break;
			case 2:
				_localctx = new ListInExtensionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(77); match(LBRACK);
				setState(78); term(0);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(79); match(COMMA);
					setState(80); term(0);
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(86); match(RBRACK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public TermContext t1;
		public Token op;
		public TermContext t2;
		public TerminalNode INCL() { return getToken(CstrSpecParser.INCL, 0); }
		public TerminalNode IN() { return getToken(CstrSpecParser.IN, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TerminalNode GEQ() { return getToken(CstrSpecParser.GEQ, 0); }
		public TerminalNode LT() { return getToken(CstrSpecParser.LT, 0); }
		public TerminalNode LEQ() { return getToken(CstrSpecParser.LEQ, 0); }
		public TerminalNode NOT_INCL() { return getToken(CstrSpecParser.NOT_INCL, 0); }
		public TerminalNode GT() { return getToken(CstrSpecParser.GT, 0); }
		public TerminalNode NOT_IN() { return getToken(CstrSpecParser.NOT_IN, 0); }
		public TerminalNode NOT_EQ() { return getToken(CstrSpecParser.NOT_EQ, 0); }
		public TerminalNode EQ() { return getToken(CstrSpecParser.EQ, 0); }
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_comparison);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); ((ComparisonContext)_localctx).t1 = term(0);
			setState(91);
			((ComparisonContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IN) | (1L << NOT_IN) | (1L << INCL) | (1L << NOT_INCL) | (1L << EQ) | (1L << NOT_EQ) | (1L << LT) | (1L << LEQ) | (1L << GT) | (1L << GEQ))) != 0)) ) {
				((ComparisonContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(92); ((ComparisonContext)_localctx).t2 = term(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedefContext extends ParserRuleContext {
		public Token op;
		public TermContext i2;
		public TerminalNode INCL() { return getToken(CstrSpecParser.INCL, 0); }
		public TerminalNode IN() { return getToken(CstrSpecParser.IN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(CstrSpecParser.COMMA); }
		public List<TerminalNode> ID() { return getTokens(CstrSpecParser.ID); }
		public TerminalNode NOT_INCL() { return getToken(CstrSpecParser.NOT_INCL, 0); }
		public TerminalNode NOT_IN() { return getToken(CstrSpecParser.NOT_IN, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(CstrSpecParser.COMMA, i);
		}
		public TerminalNode ID(int i) {
			return getToken(CstrSpecParser.ID, i);
		}
		public TypedefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).enterTypedef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CstrSpecListener ) ((CstrSpecListener)listener).exitTypedef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CstrSpecVisitor ) return ((CstrSpecVisitor<? extends T>)visitor).visitTypedef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypedefContext typedef() throws RecognitionException {
		TypedefContext _localctx = new TypedefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typedef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(ID);
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(95); match(COMMA);
				setState(96); match(ID);
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			((TypedefContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IN) | (1L << NOT_IN) | (1L << INCL) | (1L << NOT_INCL))) != 0)) ) {
				((TypedefContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(103); ((TypedefContext)_localctx).i2 = term(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
